# conways-game-of-life

./: Cargo.toml  LICENSE_MIT  after.txt  after2.txt  before.txt  perf.data  perf.data.old
src/: lib.rs
www/: index.html  index.js  package-lock.json
