[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Guilherme de Lyra <guilyra12@gmail.com>"]
edition = "2018"
description = "Conway's Game of Life"
license = "GPLV3"
repository = "https://github.com/guilhermedelyra/conways-game-of-life"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
fixedbitset = "0.3.0"
js-sys = "0.3.40"
wasm-bindgen = "0.2.63"
# rand = "0.7.3"

console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = 's'

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

